# Repositorie_for_practice

./: .gitattributes  CMakeLists.txt  README.md
ConverterValute/: ConverterValute.slnx
ConverterValute/ConverterValute/: ConverterValute.vcxproj  ConverterValute.vcxproj.filters
ConverterValute/ConverterValute/x64/Debug/: ConverterValute.exe.recipe  ConverterValute.ilk  vc145.idb
ConverterValute/ConverterValute/x64/Debug/ConverterValute.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ConverterValute.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ConverterValute/ValueConverter/libs/openjdk-25.0.2/lib/: modules
ConverterValute/ValueConverter/natives/cpp/: Api.h  Convert.cpp  DataTxt.h  Main.cpp  TestManyFolder.cpp  Timer.cpp  ValuePerNominal.cpp  ValuePerNominal.h  VoidApi.cpp  VoidDataTxt.cpp  func.cpp  myExchangeRate.txt
ConverterValute/ValueConverter/natives/cpp/Исходные файлы/: Timer.cpp
ConverterValute/ValueConverter/natives/cpp/Файлы заголвка/: Timer.h
ConverterValute/ValueConverter/src/main/java/currency.converter.project_interface/currency/converter/project_interface/: InputFormatter.java
ConverterValute/ValueConverter/src/main/resources/: messages_en.properties  messages_ru.properties
doc/: ExtCompT_en.htm  ExtCompT_ru.htm
libs/curl-8.19.0_6-win64-mingw/: BUILD-HASHES.txt
natives/UnitTests/: main.cpp
natives/UnitTests/APITest/: APITest.cpp  APITest.h
natives/UnitTests/ConvertTest/: ConvertTest.cpp  ConvertTest.h
natives/UnitTests/EnteringTest/: EnteringTest.cpp  EnteringTest.h
natives/UnitTests/GetTest/: GetTest.cpp  GetTest.h
natives/UnitTests/TimerTest/: TimerTest.cpp  TimerTest.h
natives/UnitTests/ValuePerNominalTest/: ValuePerNominalTest.cpp  ValuePerNominalTest.h
natives/UnitTests/WriteCallbackTest/: WriteCallbackTest.cpp  WriteCallbackTest.h
natives/cpp/: Api.h  Convert.cpp  Convert.h  DataTxt.h  Main.cpp  Timer.cpp  Timer.h  ValuePerNominal.cpp  VoidApi.cpp  VoidDataTxt.cpp
src/main/java/currency.converter.project_interface/: module-info.java
src/main/java/currency.converter.project_interface/currency/converter/project_interface/: ConversionService.java  CppBridge.java  Currency.java  CurrencyService.java  ErrorHandler.java  IConversionService.java  ICurrencyService.java  IThemeManager.java  LocalizationManager.java  MainApp.java  MainContentFactory.java  PlatformDetector.java  ThemeManager.java  TopBarFactory.java
src/main/resources/currency/converter/project_interface/: styles.css
template/: AddInNative.cpp  AddInNative.h  CMakeLists.txt
templateMobile/: AddInNative.cpp  AddInNative.h
templateMobile/iOS_Proj/NativeAPI.xcodeproj/: project.pbxproj
